--- a/404.html
+++ b/404.html
@@ -2,6 +2,10 @@
 <html lang="jp">
 	<head>
 		<meta name="robots" content="noindex">
+		<meta charset="UTF-8">
+		<link rel="icon" href="/favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Vite App</title>
 	</head>
 	<body>
 		<div id="app"></div>
