--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
 		<link rel="icon" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Vite App</title>
+		<script lang="ts">
+			const l = window.location;
+			console.log(l);
+		</script>
 	</head>
 	<body>
 		<div id="app"></div>
