--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 		<link rel="icon" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Vite App</title>
+		<script lang="ts">
+			((l) => {
+				if (l.search) {
+					let q = {};
+					l.search.slice(1).split("&").forEach((v) => {
+						let a = v.split("=");
+						q[a[0]] = a[1];
+					});
+					if (q.p !== undefined) {
+						window.history.replaceState(null, null, l.pathName.slice(0, -1) + (q.p || ""));
+					}
+				}
+			}(window.location));
+		</script>
 	</head>
 	<body>
 		<div id="app"></div>
