--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="jp">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="icon" href="/favicon.ico">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Vite App</title>
-		<script lang="ts">
-			(function (l) {
-				if (l.search) {
-					let q = {};
-					l.search.slice(1).split("&").forEach(function (v) {
-						let a = v.split("=");
-						q[a[0]] = a[1];
-					});
-					if (q.p !== undefined) {
-						window.history.replaceState(null, null, l.pathName.slice(0, -1) + (q.p || ""));
-					}
-				}
-			}(window.location));
-		</script>
-	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="/src/main.ts"></script>
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="icon" href="/favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Vite App</title>
+	<script lang="ts">
+		const l = window.location;
+		window.history.replaceState(null, null, l.href.replace("?p=/", ""));
+	</script>
+</head>
+
+<body>
+	<div id="app"></div>
+	<script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
