--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Vite App</title>
 	<script lang="ts">
 		const l = window.location;
-		window.history.replaceState(null, null, l.href.replace("?p=/", ""));
+		window.history.replaceState(null, null, l.href.replace("/#/", "/"));
 	</script>
 </head>
 
