--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<link rel="icon" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Vite App</title>
+		<title>waiting...</title>
 		<script lang="ts">
 			const l = window.location;
 			const splitPath = l.pathname.split("/");
@@ -14,7 +14,6 @@
 		</script>
 	</head>
 	<body>
-		<div id="app"></div>
-		<script type="module" src="/src/main.ts"></script>
+		<div id="app">waiting...</div>
 	</body>
 </html>
