enhance: [Ver.0.60] ドラッグ移動中に右クリックを押すと移動がキャンセルされるようにする (#135)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</script>
 </head>
 
-<body>
+<body oncontextmenu="return false">
 	<div id="app"></div>
 	<script type="module" src="/src/main.ts"></script>
 </body>
