WIP #152 make index page on MPA クソめんどい

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Vite App</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<!-- Github Pages にデプロイする際に必要な設定 -->
 	<script lang="ts">
 		const l = window.location;
 		window.history.replaceState(null, null, l.href.replace("/#/", "/"));
@@ -14,8 +15,8 @@
 </head>
 
 <body oncontextmenu="return false">
-	<div id="app"></div>
-	<script type="module" src="/src/main.ts"></script>
+	<div id="app">aaaaa</div>
+	<script type="module" src="/src/index/main.ts"></script>
 </body>
 
 </html>
